--- a/plan/TODO
+++ b/plan/TODO
@@ -36,3 +36,9 @@ Produkt Überlegungen
     - Welche Kosten fallen an ?
     - Wechen Preis verlangen wir für Website und Hosting
     - Steffi fragen wegen Steuer ?
+
+
+Kostenüberschlag
+    - 1€ pro Monat pro Website Hosting
+    - 100€ pro Monat Strom
+    - 50€ pro Monat Wlan
