--- a/plan/TODO
+++ b/plan/TODO
@@ -7,6 +7,7 @@ Query System
     - Query Delete (Ready)
     - Query Select (Ready)
 Component System
+    - Window
     - Margin Bug (Bootstrap abstand bei items) (Ready)
     - Panel (content align) (Ready)
     - ActionPanel extends Panel (Ready)
@@ -14,7 +15,7 @@ Component System
     - Row (Ready)
     - Column (Ready)
     - Stack (cancel) -> PanelWithBackground
-    - ScrollPanel
+    - ScrollPanel (Ready)
     - Items (Ready)
         - Icons (Ready)
         - Text (Ready) (Ideas with complex text -> in example with regex)
