--- a/plan/TODO
+++ b/plan/TODO
@@ -1,12 +1,15 @@
 WebJ
-    - Website Icon (context with favicon.ico)
-    - Robot.txt
+    - Website Icon (context with favicon.ico) (Ready)
+    - Robot.txt (Ready)
 Query System
     - Prevent Injection Attack (Ready)
     - Query Update (Ready)
     - Query Delete (Ready)
     - Query Select (Ready)
 Component System
+    - LowLevel
+        - HyperTextPage
+
     - Window
     - Margin Bug (Bootstrap abstand bei items) (Ready)
     - Panel (content align) (Ready)
