--- a/plan/TODO
+++ b/plan/TODO
@@ -10,7 +10,7 @@ Component System
     - LowLevel
         - HyperTextPage
 
-    - Window
+    - Popup (Ready)
     - Margin Bug (Bootstrap abstand bei items) (Ready)
     - Panel (content align) (Ready)
     - ActionPanel extends Panel (Ready)
